--- a/SoftwareArchProject/Hotel_booking/notificationdemo/src/main/resources/application.properties
+++ b/SoftwareArchProject/Hotel_booking/notificationdemo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8090
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username =raja.engg444@gmail.com
+spring.mail.username =saikiran.potti@gmail.com
 spring.mail.password = sfsbqedpqjxpbcdo
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
